# AI-assisted-content-generation

./: .gitignore  AI assisted content generation- features.md  Design document  Features.md  Journey.py  Next steps  README.md  agents.py  main.py  pyproject.toml  requirements.txt  sample.py  tasks.py  use-cases.md
conf/: config.yml
output/: YouTube_Video_Creation_Report_english.txt
